style: Added styling for tablet and desktop
- Implemented styling for the tablet (768px width) and
  desktop (1440px width) devices.
- Updated the slider-scroll script to adapt to the picture size
  variations.

--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
 		</section>
 		<section id="about-me">
 			<img src="assets/images/image-amy.webp" alt="Amy's picture" />
-			<h3>I'm Amy, and I'd love to work on your next project</h3>
-			<p>
-				I love working with others to create beautiful design solutions. I've designed everything from brand illustrations to complete mobile apps. I'm also handy with a camera!
-			</p>
-			<button type="button" class="button-two">Free consultation</button>
+			<div>
+				<h3>I'm Amy, and I'd love to work on your next project</h3>
+				<p>
+					I love working with others to create beautiful design solutions. I've designed everything from brand illustrations to complete mobile apps. I'm also handy with a camera!
+				</p>
+				<button type="button" class="button-two">Free consultation</button>
+			</div>
 		</section>
 		<section id="my-work">
 			<h3>My work</h3>
@@ -103,11 +105,15 @@
 			</div>
 		</section>
 		<section id="book-a-call">
-			<h3>Book a call with me</h3>
-			<p>
-				I'd love to have a chat to see how I can help you. The best first step is for us to discuss your project during a free consultation. Then we can move forward from there.
-			</p>
-			<button type="button" class="button-two">Free consultation</button>
+			<div>
+				<h3>Book a call with me</h3>
+				<p>
+					I'd love to have a chat to see how I can help you. The best first step is for us to discuss your project during a free consultation. Then we can move forward from there.
+				</p>
+			</div>
+			<div>
+				<button type="button" class="button-two">Free consultation</button>
+			</div>
 		</section>
 	</main>
 	<footer>
